fix(frontend): removed scrollbar

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,16 @@
+html {
+	overflow: scroll;
+	overflow-x: hidden;
+ }
+ ::-webkit-scrollbar {
+	width: 0;  /* Remove scrollbar space */
+	background: transparent;  /* Optional: just make scrollbar invisible */
+ }
+ /* Optional: show position indicator in red */
+ ::-webkit-scrollbar-thumb {
+	background: #FF0000;
+ }
+
 #root {
 }
 html, body, div, span, applet, object, iframe,
